crates/sui-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-3.snap
---
source: crates/sui-config/tests/snapshot_tests.rs
expression: genesis.sui_system_object()
---
info:
  id: "0x1ace65f54d65a96251b3f46bfa720ab65a7ebe0174caa9fa1dc0d65a56ae7872"
epoch: 0
protocol_version: 1
validators:
  validator_stake: 1
  delegation_stake: 0
  active_validators:
    - metadata:
        sui_address: "0x21b60aa9a8cb189ccbe20461dbfad2202fdef55b9418f30ac2c5fe632f6e1cb7"
        pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 13
          - 125
          - 171
          - 53
          - 140
          - 141
          - 173
          - 170
          - 78
          - 250
          - 0
          - 73
          - 167
          - 91
          - 7
          - 67
          - 101
          - 85
          - 177
          - 10
          - 54
          - 130
          - 25
          - 187
          - 104
          - 15
          - 112
          - 87
          - 19
          - 73
          - 215
          - 117
        worker_pubkey_bytes:
          - 13
          - 125
          - 171
          - 53
          - 140
          - 141
          - 173
          - 170
          - 78
          - 250
          - 0
          - 73
          - 167
          - 91
          - 7
          - 67
          - 101
          - 85
          - 177
          - 10
          - 54
          - 130
          - 25
          - 187
          - 104
          - 15
          - 112
          - 87
          - 19
          - 73
          - 215
          - 117
        proof_of_possession_bytes:
          - 142
          - 15
          - 172
          - 17
          - 244
          - 140
          - 83
          - 140
          - 9
          - 21
          - 215
          - 217
          - 82
          - 233
          - 52
          - 153
          - 34
          - 39
          - 105
          - 154
          - 217
          - 2
          - 47
          - 75
          - 129
          - 116
          - 137
          - 208
          - 46
          - 252
          - 36
          - 74
          - 180
          - 241
          - 90
          - 96
          - 224
          - 13
          - 186
          - 53
          - 120
          - 162
          - 88
          - 168
          - 131
          - 137
          - 136
          - 233
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: []
        p2p_address: []
        consensus_address: []
        worker_address: []
        next_epoch_stake: 1
        next_epoch_delegation: 0
        next_epoch_gas_price: 1
        next_epoch_commission_rate: 0
      voting_power: 10000
      stake_amount: 1
      pending_stake: 0
      pending_withdraw: 0
      gas_price: 1
      delegation_staking_pool:
        id: "0xd5d9aa879b78dc1f516d71ab979189086eff752f65e4b0dea15829e3157962e1"
        starting_epoch: 1
        sui_balance: 0
        rewards_pool:
          value: 0
        delegation_token_supply:
          value: 0
        pending_delegations:
          id: "0xab8235dace3d68c7fb48110d63cbf4d6fd81ce101610b747b049f97dec31140c"
          size: 0
          head:
            vec: []
          tail:
            vec: []
        pending_withdraws:
          contents:
            id: "0x18b8140c8a6ea340142f128061016fc4bd8220ec88875a8e573a5f72a85a15c1"
            size: 0
      commission_rate: 0
  pending_validators: []
  pending_removals: []
  next_epoch_validators:
    - sui_address: "0x21b60aa9a8cb189ccbe20461dbfad2202fdef55b9418f30ac2c5fe632f6e1cb7"
      pubkey_bytes:
        - 153
        - 242
        - 94
        - 246
        - 31
        - 128
        - 50
        - 185
        - 20
        - 99
        - 100
        - 96
        - 152
        - 44
        - 92
        - 198
        - 241
        - 52
        - 239
        - 29
        - 218
        - 231
        - 102
        - 87
        - 242
        - 203
        - 254
        - 193
        - 235
        - 252
        - 141
        - 9
        - 115
        - 116
        - 8
        - 13
        - 246
        - 252
        - 240
        - 220
        - 184
        - 188
        - 75
        - 13
        - 142
        - 10
        - 245
        - 216
        - 14
        - 187
        - 255
        - 43
        - 76
        - 89
        - 159
        - 84
        - 244
        - 45
        - 99
        - 18
        - 223
        - 195
        - 20
        - 39
        - 96
        - 120
        - 193
        - 204
        - 52
        - 126
        - 187
        - 190
        - 197
        - 25
        - 139
        - 226
        - 88
        - 81
        - 63
        - 56
        - 107
        - 147
        - 13
        - 2
        - 194
        - 116
        - 154
        - 128
        - 62
        - 35
        - 48
        - 149
        - 94
        - 189
        - 26
        - 16
      network_pubkey_bytes:
        - 13
        - 125
        - 171
        - 53
        - 140
        - 141
        - 173
        - 170
        - 78
        - 250
        - 0
        - 73
        - 167
        - 91
        - 7
        - 67
        - 101
        - 85
        - 177
        - 10
        - 54
        - 130
        - 25
        - 187
        - 104
        - 15
        - 112
        - 87
        - 19
        - 73
        - 215
        - 117
      worker_pubkey_bytes:
        - 13
        - 125
        - 171
        - 53
        - 140
        - 141
        - 173
        - 170
        - 78
        - 250
        - 0
        - 73
        - 167
        - 91
        - 7
        - 67
        - 101
        - 85
        - 177
        - 10
        - 54
        - 130
        - 25
        - 187
        - 104
        - 15
        - 112
        - 87
        - 19
        - 73
        - 215
        - 117
      proof_of_possession_bytes:
        - 142
        - 15
        - 172
        - 17
        - 244
        - 140
        - 83
        - 140
        - 9
        - 21
        - 215
        - 217
        - 82
        - 233
        - 52
        - 153
        - 34
        - 39
        - 105
        - 154
        - 217
        - 2
        - 47
        - 75
        - 129
        - 116
        - 137
        - 208
        - 46
        - 252
        - 36
        - 74
        - 180
        - 241
        - 90
        - 96
        - 224
        - 13
        - 186
        - 53
        - 120
        - 162
        - 88
        - 168
        - 131
        - 137
        - 136
        - 233
      name: "0"
      description: ""
      image_url: ""
      project_url: ""
      net_address: []
      p2p_address: []
      consensus_address: []
      worker_address: []
      next_epoch_stake: 1
      next_epoch_delegation: 0
      next_epoch_gas_price: 1
      next_epoch_commission_rate: 0
  staking_pool_mappings:
    id: "0x628ffd0e51e9a6ea32c13c2739a31a8f344b557d3429e057b377a9c499b9bb13"
    size: 1
storage_fund:
  value: 1
parameters:
  min_validator_stake: 1
  max_validator_candidate_count: 100
reference_gas_price: 1
validator_report_records:
  contents: []
stake_subsidy:
  epoch_counter: 0
  balance:
    value: 1000000000000000000
  current_epoch_amount: 1000000
safe_mode: false
epoch_start_timestamp_ms: 10

